# GOFR

src/: instructions for use
src/Arduino/MDDS30MotorControllerforPS2/: MDDS30MotorControllerforPS2.ino
src/Arduino/MecanumBotController2/: GOFRController.ino  MecanumBotController2.ino
src/Arduino/MecanumBotController2_with_PID/: MecanumBotController2_with_PID.ino
src/Arduino/MecanumBotControllerPWMMDDS30withMecanum/: MecanumBotControllerPWMMDDS30withMecanum.ino
src/gofr_bringup/: CMakeLists.txt  package.xml
src/gofr_bringup/launch/: GOFR_control.launch  GOFR_controller.yaml  gofr_core.launch  gofr_lidar.launch  gofr_remote.launch  gofr_robot.launch
src/gofr_bringup/launch/includes/: description.launch.xml
src/gofr_bringup/src/: odometry_publisher.cpp
src/gofr_description/: CMakeLists.txt  package.xml
src/gofr_description/meshes/bases/: Fork_Base_1_m-binary.stl  Forks_1_m-binary.stl  GOFR_mini.stl  Lift_1_m-binary.stl  base_link_m-binary.stl
src/gofr_description/meshes/wheels/: Wheel_FL_1_m-binary.stl  Wheel_FR_1_m-binary.stl  Wheel_RL_1_m-binary.stl  Wheel_RR_1_m-binary.stl
src/gofr_description/urdf/: gofr.gazebo.xacro  gofr.urdf.xacro  gofr_mini.gazebo.xacro  gofr_mini.urdf.xacro
src/gofr_gazebo/: CMakeLists.txt  package.xml
src/gofr_gazebo/launch/: gofr_lab.launch  gofr_world.launch  turtlebot3_house.launch
src/gofr_gazebo/src/: gofr_drive.cpp
src/gofr_gazebo/worlds/: ENTLab  ENTLab.world
src/gofr_navigation/: CMakeLists.txt  package.xml
src/gofr_navigation/launch/: amcl.launch  gofr_navigation.launch  move_base.launch
src/gofr_navigation/maps/: ENTLab.pgm  ENTLab.yaml  house_map.pgm  house_map.yaml  house_map_tables.pgm  map.pgm  mymap.pgm  mymap.yaml
src/gofr_navigation/param/: base_local_planner_params.yaml  costmap_common_params_gofr.yaml  dwa_local_planner_params_gofr.yaml  move_base_params.yaml
src/gofr_navigation/rviz/: gofr_navigation.rviz
src/gofr_navigation/src/: move_to_goal.cpp  move_to_goal.py
src/gofr_slam/: CMakeLists.txt  package.xml
src/gofr_slam/launch/: gofr_gmapping.launch  gofr_hector.launch  gofr_slam.launch
src/gofr_slam/rviz/: gofr_gmapping.rviz
src/gofr_teleop/: CMakeLists.txt  package.xml  setup.py
src/gofr_teleop/launch/: gofr_teleop_key.launch
src/gofr_teleop/nodes/: gofr_teleop_key  gofr_teleop_key (copy)
